--- a/opdracht-1/styles.css
+++ b/opdracht-1/styles.css
@@ -46,10 +46,14 @@ main a:visited {
 
 /* Verander de achtergrond van de SignUp button. Tip: https://developer.mozilla.org/en-US/docs/Web/CSS/Attribute_selectors  */
 
-
+.subscribe input:last-child {
+    background: gold;
+}
 /* Geef het tekst-veld een blauwe rand wanneer hij in focus is */
 
-
+.subscribe input:last-child:hover {
+    color: blue;
+}
 
 /* Target alle heading tags op de pagina en zet hun font-family op 'Noto Sans JP', sans-serif */
 
