--- a/opdracht-2/styles.css
+++ b/opdracht-2/styles.css
@@ -2,4 +2,31 @@
    OEFENEN MET FLEXBOX
 ========================================================= */
 
-/* Schrijf hier  jouw CSS! */
+.one {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+.two {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+}
+
+.three ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+
+
+
+
+
+}
+.three div {
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+}
